Fixed text alignment

--- a/src/components/ProjectContent/ProjectContent.scss
+++ b/src/components/ProjectContent/ProjectContent.scss
@@ -4,7 +4,6 @@
   width: 100vw;
   background: $color-black;
   color: white;
-  text-align: center;
   display: block;
   /* 
   @include breakpoint(small) {
@@ -14,17 +13,15 @@
 
   .project-content--text {
     padding: $unit900 $unit400;
+    text-align: center;
 
-    p {
-      text-align: left;
-
-      + p {
-        margin-top: $unit300;
-      }
+    p + p {
+      margin-top: $unit300;
     }
 
     @include breakpoint(small) {
-      padding: $unit700 $unit300;
+      padding: $unit900 $unit300;
+      text-align: left;
     }
   }
 
